---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
fn f() {}

print(type_name(nil))
print(type_name(true))
print(type_name(1))
print(type_name(1.0))
print(type_name("test"))
print(type_name({}))
print(type_name([]))
print(type_name(f))
print(type_name(print))
}

OK
.fn @main
  params 0
  stack 5
  .locals
    f = r1
  .code
   0  lclosure r1, l0   ; f, uv=0
   1  lnil r4
   2  call r3, type_name
   3  call r2, print
   4  ltrue r4
   5  call r3, type_name
   6  call r2, print
   7  lsmi r4, 1
   8  call r3, type_name
   9  call r2, print
  10  lnum r4, 1.0
  11  call r3, type_name
  12  call r2, print
  13  lstr r4, "test"
  14  call r3, type_name
  15  call r2, print
  16  ltable r4, 0
  17  call r3, type_name
  18  call r2, print
  19  llist r4, 0
  20  call r3, type_name
  21  call r2, print
  22  mov r4, r1
  23  call r3, type_name
  24  call r2, print
  25  lhost r4, h0   ; h0=print
  26  call r3, type_name
  27  call r2, print
  28  retv r2

.fn f
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
